--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,8 @@
 {
-    "display":      "standalone", /* Could be "fullscreen", "standalone", "minimal-ui", or "browser" */
-    "orientation":  "landscape", /* Could be "landscape" or "portrait" */
+  "name": "PhadiaWeb",
+  "short_name": "phadia",
+  "lang": "en-US",
+  "start_url": "/",
+  "display": "standalone",
+  "orientation": "landscape"
 }
